v0.0.1: Create ctime for roach and master data
v0.1: Added interpolation functions 
v0.2: Added pointing functions and offset options in interpolation
v0.3: Added basic detectors functions
v0.3.1: Solved bug in finding the idx of the time in the roach ctime
v0.4: Added mapmaker code 
v0.4.5: Solved a bug for loading data from master with different spf than the ctime
        Solved a bug in creating ctime_master. Now, it is created with the same spf than the original fields
        Added an option to interpolate data starting from roach indices 
v0.4.6: Solved multiples bugs
        Changed the function to resample data from scipy.signal.resample to use interpolation
v1.0: Reorganization of the mapmaker and pointing libraries
      Modified peak finder code with more functionalities to select peaks 